# qt_start

./: .gitignore  object_tree.md
coin_clip/: CMakeLists.txt  coin.cpp  coin.h  level_config.cpp  level_config.h  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  mypush_button.cpp  mypush_button.h  play_scene.cpp  play_scene.h  remove_dupicate.sh  resource.qrc  select_level_scene.cpp  select_level_scene.h
common_buttons/: CMakeLists.txt  resource.qrc  widget.cpp  widget.h  widget.ui
common_widgets/: CMakeLists.txt  resource.qrc  widget.cpp  widget.h  widget.ui
custom_mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
custom_signal_slot/: CMakeLists.txt  dog.cpp  dog.h  master.cpp  master.h  widget.cpp  widget.h
custom_widget/: CMakeLists.txt  customslider.cpp  customslider.h  customslider.ui  widget.cpp  widget.h  widget.ui
file_read_write/: CMakeLists.txt  file_read_write_config.h.in  text.txt  widget.cpp  widget.h
login_layout/: CMakeLists.txt  mainwindow.h  mainwindow.ui
login_layout_without_ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
mouse_event/: CMakeLists.txt  customlabel.cpp  customlabel.h  widget.cpp  widget.h  widget.ui
open_new_widget/: CMakeLists.txt  newwidget.cpp  newwidget.h  widget.cpp  widget.h
paint_event/: CMakeLists.txt  widget.cpp  widget.h
painter_device/: CMakeLists.txt  painter_device_config.h.in  resources.qrc  widget.cpp  widget.h
painter_device/paintings/: picture.pic
resource_files/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
standard_other_dialogs/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
starting_widget/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
table_widget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resoure.qrc  tvshow.cpp  tvshow.h  tvshows.txt
timer/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
tree_widget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
